--- a/FindYourPhotographer.Backend/Views/Photographers/Index.cshtml
+++ b/FindYourPhotographer.Backend/Views/Photographers/Index.cshtml
@@ -4,18 +4,21 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Photographer</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new { }, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Category.Descripcion)
+            Category
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            Photographer
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Image)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Price)
@@ -29,7 +32,7 @@
         <th>
             @Html.DisplayNameFor(model => model.LastEvent)
         </th>
-        <th>
+        <th width="50px">
             @Html.DisplayNameFor(model => model.Remarks)
         </th>
         <th></th>
@@ -43,6 +46,14 @@
         <td>
             @Html.DisplayFor(modelItem => item.Description)
         </td>
+        <td>
+            @if (!string.IsNullOrEmpty(item.Image))
+            {
+                <img src="@Url.Content(item.Image)" alt="Image" style="width:100px;height:150px;max-width: 100%; height: auto;" />
+            }
+
+        </td>
+
         <td>
             @Html.DisplayFor(modelItem => item.Price)
         </td>
@@ -59,9 +70,9 @@
             @Html.DisplayFor(modelItem => item.Remarks)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PhotographerId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PhotographerId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PhotographerId })
+            @Html.ActionLink("Edit", "Edit", new { id = item.PhotographerId }, new { @class = "btn btn-warning" })
+            @Html.ActionLink("Details", "Details", new { id=item.PhotographerId }, new { @class = "btn btn-info" }) 
+            @Html.ActionLink("Delete", "Delete", new { id=item.PhotographerId }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
